# fp

./: Cargo.toml  README.md
examples/: main.rs
src/: add_sub.rs  int.rs  lib.rs  mul_div.rs  num_impl.rs  types.rs
tests/: float.rs  from_into.rs  mul_div.rs
